# ninja

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/agent/: api_client.rs  claude_client.rs  mod.rs  rollout.rs  runner.rs
src/tools/: file_ops.rs  git.rs  mcp.rs  memory.rs  mod.rs  navigate.rs  oracle.rs  search.rs  shell.rs  state.rs  subagent.rs  testing.rs  think.rs  todo.rs  web.rs
tasks/: __init__.py  coverage.py  runner.py  schema.py
tasks/dataset/: ambiguous_3cd6d67f.json  ambiguous_3eef9e36.json  ambiguous_49e3237b.json  ambiguous_4a76a000.json  ambiguous_c15e9397.json  ambiguous_d0886406.json  data_analysis_03e8f658.json  data_analysis_4842f69c.json  data_analysis_6d841de9.json  data_analysis_88329ff7.json  data_analysis_8f0df5f5.json  diagnostic_38161640.json  diagnostic_4504585d.json  diagnostic_586fafbc.json  diagnostic_5f3b4150.json  diagnostic_5f4d2eca.json  diagnostic_746f4af8.json  diagnostic_758032fb.json  diagnostic_990549f4.json  diagnostic_bbea32f6.json  diagnostic_bbf29f2a.json  diagnostic_d869e785.json  diagnostic_e65032e7.json  diagnostic_effc6b91.json  docs_reconciliation_1d491729.json  docs_reconciliation_20acb35b.json  docs_reconciliation_58642064.json  docs_reconciliation_a522a0f8.json  docs_reconciliation_c4d94878.json  env_debug_0a138490.json  env_debug_1ff3f75b.json  env_debug_51b3c00f.json  env_debug_6c42c133.json  env_debug_b5c51cf2.json  (+235 more)
tmp_tasks/: .task_prompt.md  Makefile  pyproject.toml  rollout.json  setup.py
tmp_tasks/include/: fastmath.h
tmp_tasks/mylib/: __init__.py  _fastmath.c
tmp_tasks/tests/: test_build.py
(+903 files in other folders)
